# ForgeQL

./: .forgeql-session  .forgeql.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HINTS.md  LICENSE  README.md  TODO.md  rust-toolchain.toml  rustfmt.toml  zz_offset_test.md  zz_offset_test.rs
crates/forgeql/: Cargo.toml  forgeql.h2m
crates/forgeql-client/: Cargo.toml  forgeql-client.h2m
crates/forgeql-client/src/: main.rs
crates/forgeql-coach/: Cargo.toml
crates/forgeql-coach/src/: lib.rs
crates/forgeql-core/: Cargo.toml
crates/forgeql-core/benches/: columnar_filter.rs  columnar_range.rs
crates/forgeql-core/src/: auth.rs  budget.rs  coach_api.rs  compact.rs  config.rs  context.rs  debug_log.rs  engine.rs  error.rs  filter.rs  ir.rs  jobs.rs  lib.rs  node_id.rs  query_logger.rs  result.rs  showmore.rs  undo.rs  zz_blankrepro.rs
crates/forgeql-core/src/ast/: cache.rs  index.rs  intern.rs  lang.rs  lang_json.rs  mod.rs  parse_cache.rs  query.rs  show.rs  trigram.rs
crates/forgeql-core/src/ast/enrich/: casts.rs  comments.rs  control_flow.rs  data_flow_utils.rs  decl_distance.rs  error_scope.rs  escape.rs  fallthrough.rs  guard_utils.rs  macro_expand_enrich.rs  macro_resolve.rs  macro_table.rs  member.rs  metrics.rs  mod.rs  naming.rs  numbers.rs  operators.rs  recursion.rs  redundancy.rs  scope.rs  shadow.rs  todo.rs  unused_param.rs
crates/forgeql-core/src/ast/index/: build.rs  file_indexer.rs
crates/forgeql-core/src/ast/lang/: config.rs  inline.rs
crates/forgeql-core/src/ast/show/: body.rs  callees.rs  members.rs  request.rs
crates/forgeql-core/src/compact/: tests.rs
crates/forgeql-core/src/engine/: convert.rs  exec_change.rs  exec_find.rs  exec_session.rs  exec_show.rs  exec_source.rs  exec_transaction.rs  helpers.rs  tests.rs  warm.rs
crates/forgeql-core/src/engine/exec_change/: change.rs  delete.rs  found.rs  insert.rs  plan.rs  raw_text.rs  relocate.rs  resolve.rs  tombstones.rs
crates/forgeql-core/src/filter/: impls.rs  tests.rs
crates/forgeql-core/src/git/: mod.rs  source.rs  worktree.rs
crates/forgeql-core/src/parser/: change.rs  clauses.rs  find.rs  forgeql.pest  helpers.rs  mod.rs  tests.rs  transaction.rs
crates/forgeql-core/src/result/: convert.rs  diff_patch.rs  display.rs  jobs.rs  mutation.rs  query.rs  show.rs  source_ops.rs  tests.rs  transaction.rs
crates/forgeql-core/src/session/: checkpoint_file.rs  coords.rs  found_set.rs  last_set.rs  mod.rs
crates/forgeql-core/src/storage/: README.md  backend_set.rs  git_sha1_provider.rs  legacy.rs  mock_provider.rs  mod.rs  source_provider.rs  stub.rs
crates/forgeql-core/src/storage/columnar/: build_context.rs  columnar_storage.rs  delta_file.rs  dirty_overlay.rs  gc.rs  manifest.rs  mod.rs  overlay.rs  (+6 more)
crates/forgeql-core/src/transforms/: change.rs  copy_move.rs  diff.rs  mod.rs
crates/forgeql-core/src/verify/: mod.rs
crates/forgeql-core/src/workspace/: file_io.rs  mod.rs
crates/forgeql-core/tests/: backend_set.rs  change_integration.rs  checkpoint_persist.rs  commit_gate.rs  common_smoke.rs  coords.rs  engine_addressing.rs  engine_file_ops.rs  engine_integration.rs  enrichment_integration.rs  find_row_cap.rs  lang_behavior.rs  lang_coverage_integration.rs  multilang_resolve_integration.rs  overlay_parity.rs  parity_find.rs  reconnect_dirty.rs  restore_scan_safety.rs  segment_parity.rs  sms_integration.rs  syntax_coverage.rs
crates/forgeql-core/tests/common/: mod.rs
crates/forgeql-lang-cpp/: Cargo.toml
crates/forgeql-lang-cpp/config/: cpp.json
crates/forgeql-lang-cpp/src/: lib.rs  macro_expand.rs
crates/forgeql-lang-json/: Cargo.toml
crates/forgeql-lang-json/config/: json.json
crates/forgeql-lang-json/src/: lib.rs
crates/forgeql-lang-json/tests/: indexing.rs
crates/forgeql-lang-markdown/: Cargo.toml
crates/forgeql-lang-markdown/config/: md.json
crates/forgeql-lang-python/: Cargo.toml
crates/forgeql-lang-python/config/: python.json
crates/forgeql-lang-python/src/: lib.rs
crates/forgeql-lang-rust/: Cargo.toml
crates/forgeql-lang-rust/config/: rust.json
crates/forgeql-lang-rust/src/: lib.rs  macro_expand.rs
crates/forgeql-lang-text/: Cargo.toml
crates/forgeql-lang-text/config/: cmake.json  dbc.json  ini.json  json.json  just.json  make.json  rst.json  toml.json  xml.json
crates/forgeql-lang-text/src/: cmake.rs  dbc.rs  ini.rs  json.rs  just.rs  lib.rs  make.rs  markdown.rs  rst.rs  structure.rs  toml.rs  xml.rs  yaml.rs
crates/forgeql-lang-text/tests/: cmake_indexing.rs  dbc_indexing.rs  json_indexing.rs  xml_indexing.rs
crates/forgeql-lang-text/tests/fixtures/: adc_ecuc.arxml  build_options.cmake  golden_sample.json  powertrain.dbc
crates/forgeql-lang-toml/: Cargo.toml
crates/forgeql-lang-toml/src/: lib.rs
crates/forgeql-lang-xml/: Cargo.toml
crates/forgeql-lang-xml/tests/: indexing.rs
crates/forgeql-lang-xml/tests/fixtures/: adc_config.xdm
crates/forgeql-lang-yaml/: Cargo.toml
crates/forgeql-lang-yaml/config/: yaml.json
crates/forgeql-lang-yaml/src/: lib.rs
crates/forgeql-server/: Cargo.toml  forgeql-server.h2m
crates/forgeql-server/src/: auth.rs  http.rs  main.rs
crates/forgeql/src/: cli.rs  execute.rs  main.rs  mcp.rs  path_utils.rs  session.rs
crates/forgeql/src/runner/: mcp_stdio.rs  mod.rs  one_shot.rs  pipe.rs  repl.rs
crates/forgeql/tests/: corpus.json  golden.json  golden_test.rs  parity_find.rs  zephyr_golden.rs
crates/forgeql/tests/golden/: README.md  cpp_struct_coverage.json  enrich_casts.json  enrich_comments.json  enrich_control_flow.json  enrich_decl_distance.json  enrich_escape.json  enrich_fallthrough.json  enrich_is_magic.golden  enrich_members.json  enrich_metrics.json  enrich_naming.json  enrich_operators.json  enrich_recursion.json  enrich_redundancy.json  enrich_scope.json  enrich_shadow.json  enrich_todo.json  enrich_unused_param.json  export_patch.json  node_addressing.json  node_mutations.json  probes_pytorch.json  probes_rust.json  probes_zephyr.json  structured_text.json  twin_handle_retirement.json
tools/ts-debug/: Cargo.toml
tools/ts-debug/src/: main.rs
(+49 files in other folders)
