[workspace]
resolver = "2"
members = [
    "crates/forgeql-core",
    "crates/forgeql-lang-c",
    "crates/forgeql-lang-cpp",
    "crates/forgeql-lang-python",
    "crates/forgeql-lang-rust",
    "crates/forgeql-lang-text",
    "crates/forgeql",
    "crates/forgeql-server",
    "crates/forgeql-client",
    "tools/ts-debug",
]
# tools/ crates are workspace members (for Cargo.lock version parity) but are
# excluded from default builds so they don't slow down `cargo build / test`.
# Build the debug tool explicitly with: cargo build -p forgeql-ts-debug
default-members = [
    "crates/forgeql-core",
    "crates/forgeql-lang-c",
    "crates/forgeql-lang-cpp",
    "crates/forgeql-lang-python",
    "crates/forgeql-lang-rust",
    "crates/forgeql-lang-text",
    "crates/forgeql",
    "crates/forgeql-server",
    "crates/forgeql-client",
]

[workspace.package]
version   = "0.91.7"
edition   = "2024"
authors   = ["Andre Viegas"]
license   = "Apache-2.0"

# -----------------------------------------------------------------------
# Workspace-wide lint configuration (Rust 1.73+).
# All crates inherit these automatically — no per-file #![deny(...)] needed.
# -----------------------------------------------------------------------
[workspace.lints.rust]
# Deny common correctness pitfalls.
unsafe_code            = "deny"    # override per-crate if FFI is needed
missing_docs           = "warn"
unused_results         = "warn"
unreachable_pub        = "warn"

[workspace.lints.clippy]
# Pedantic catches non-idiomatic code (wrong iterator usage, naming, etc.)
pedantic               = { level = "warn", priority = -1 }

# Nursery is experimental but useful — some rules will graduate to pedantic.
nursery                = { level = "warn", priority = -1 }

# Hard errors — these indicate real bugs:
unwrap_used            = "deny"    # use `?` or `expect("reason")` in library code
expect_used            = "warn"    # allowed in tests; warn in lib code
panic                  = "warn"
todo                   = "warn"
unimplemented          = "warn"

# Style rules:
wildcard_imports       = "deny"    # no `use foo::*;` (use explicit imports)
enum_glob_use          = "deny"
manual_string_new      = "warn"

# -----------------------------------------------------------------------
[workspace.dependencies]
# Shared dependency versions — crates inherit these with
# `dependency = { workspace = true }` in their own Cargo.toml.
# This ensures every crate in the workspace uses the same version.

# --- async runtime (server/CLI only — core is synchronous) ---
tokio            = { version = "1",    features = ["full"] }

# --- MCP protocol ---
rmcp             = { version = "1.2", features = ["server", "transport-io"] }

# --- serialization ---
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
serde_yml        = "0.0.12"

# --- AST parsing ---
tree-sitter      = "0.25"
tree-sitter-c    = "0.23"
tree-sitter-cpp  = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md     = "0.3"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-yaml = "0.7"
# Cargo.lock is TOML too, so this grammar covers both manifests. The original
# `tree-sitter-toml` is pinned to old tree-sitter; the `-ng` fork tracks 0.23+.
tree-sitter-toml = { package = "tree-sitter-toml-ng", version = "0.7" }
# One grammar covers the whole XML family: plain .xml plus the automotive
# dialects (AUTOSAR .arxml, tresos .xdm/.epc/.epd, .ecuc, .odx).
tree-sitter-xml  = "0.7"
# Vector CAN database (.dbc) bus descriptions.
tree-sitter-dbc  = "0.1"
# INI-style config (.ini/.cfg, .editorconfig, .gitconfig).
tree-sitter-ini  = "1.4"
# just command-runner files (justfile).
tree-sitter-just = "0.2"
# GNU Make (Makefile, GNUmakefile, *.mk).
tree-sitter-make = "1.1"
# CMake (CMakeLists.txt, *.cmake).
tree-sitter-cmake = "0.7"
# reStructuredText (.rst) documentation.
tree-sitter-rst  = "0.2"

# --- DSL parsing ---
pest             = "2"
pest_derive      = "2"

# --- parallelism ---
rayon            = "1.10"

# --- file operations ---
tempfile         = "3"
ignore           = "0.4"
# Cross-platform advisory file locking (flock / LockFileEx) used to
# serialise overlay builds across processes (Phase 05 R7).
fd-lock          = "4"

# --- git ---
# vendored-openssl compiles OpenSSL from source — required for cross-compilation
git2             = { version = "0.19", features = ["vendored-openssl"] }

# --- regex ---
regex            = "1"

# --- index serialization ---
bincode          = "1"

# --- hashing ---
sha1             = { version = "0.10", features = ["oid"] }
sha2             = "0.10"
# --- columnar storage engine (Phase 03+) ---
memmap2  = "0.9"
roaring  = "0.10"
fst      = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# --- error handling ---
anyhow           = "1"
thiserror        = "1"

# --- logging ---
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# --- CLI ---
clap             = { version = "4", features = ["derive", "env"] }
rustyline        = "15"
dirs             = "5"

# --- internal crates ---
forgeql-core        = { path = "crates/forgeql-core" }
forgeql-lang-c      = { path = "crates/forgeql-lang-c" }
forgeql-lang-cpp    = { path = "crates/forgeql-lang-cpp" }
forgeql-lang-python = { path = "crates/forgeql-lang-python" }
forgeql-lang-rust   = { path = "crates/forgeql-lang-rust" }
forgeql-lang-text   = { path = "crates/forgeql-lang-text" }

# --- allocator (replaces glibc malloc; returns pages to OS after large frees) ---
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# --- testing ---
insta            = "1"
criterion        = { version = "0.5", features = ["html_reports"] }

# -----------------------------------------------------------------------
# Build all ForgeQL packages with full optimisations in every profile.
# This means `cargo test` spawns the same fast binary as `cargo build
# --release`, so the zephyr_golden integration test runs in seconds.
# There is no separate "debug binary"; a single optimised build is used.
# -----------------------------------------------------------------------
[profile.dev.package.forgeql]
opt-level = 3

[profile.dev.package.forgeql-core]
opt-level = 3

[profile.dev.package.forgeql-lang-rust]
opt-level = 3

[profile.dev.package.forgeql-lang-cpp]
opt-level = 3

[profile.dev.package.forgeql-lang-c]
opt-level = 3

[profile.dev.package.forgeql-lang-python]
opt-level = 3

# -----------------------------------------------------------------------
# `ci` profile — used by the cached CI scripts (data/scripts/lib/build-cache.sh).
#
# Goal: let `cargo build` and `cargo test` share ONE optimised compile instead
# of building the workspace twice (release for the binary + dev for the tests).
# It inherits `release` (opt-level 3 → fast test execution) but keeps the two
# correctness checks that the dev/test profile normally gives, so switching
# tests onto it loses no coverage:
#   * debug-assertions → `debug_assert!` stays active   (≈ C assert())
#   * overflow-checks   → integer overflow still panics  (vs silent wrap)
#
# Nothing uses this profile unless invoked explicitly with `--profile ci`, so
# adding it does not change `cargo build`, `cargo test`, or `--release`.
# -----------------------------------------------------------------------
[profile.ci]
inherits         = "release"
debug-assertions = true
overflow-checks  = true
