[package]
name        = "forgeql-client"
description = "ForgeQL client — thin terminal REPL/pipe client for forgeql-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.deb]
maintainer = "Andre Viegas <andrerviegas@gmail.com>"
section = "devel"
priority = "optional"
assets = [
    ["target/release/forgeql-client", "usr/bin/", "755"],
    ["man/forgeql-client.1", "usr/share/man/man1/forgeql-client.1", "644"],
]
extended-description = "ForgeQL client — a thin terminal REPL and pipe client for forgeql-server."

[[bin]]
name = "forgeql-client"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# errors
anyhow = { workspace = true }

# CLI args + line editing
clap      = { workspace = true }
rustyline = { workspace = true }

# MCP JSON-RPC envelope
serde_json = { workspace = true }

# HTTP transport (blocking — the REPL is a simple request/response loop).
# rustls avoids a system OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }