[package]
name        = "forgeql-core"
description = "ForgeQL transform engine — AST parsing, transforms, workspace management"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[features]
test-helpers = ["tree-sitter-cpp", "tree-sitter-python", "tree-sitter-rust"]

[lints]
workspace = true

[dependencies]
# serialization
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yml   = { workspace = true }

# AST parsing
tree-sitter       = { workspace = true }
tree-sitter-cpp    = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust   = { workspace = true, optional = true }
# DSL parsing
pest        = { workspace = true }
pest_derive = { workspace = true }

# regex
regex       = { workspace = true }

# parallelism
rayon       = { workspace = true }

# file ops
tempfile    = { workspace = true }
ignore      = { workspace = true }
fd-lock     = { workspace = true }

# git
git2        = { workspace = true }

# index serialization
bincode     = { workspace = true }

# hashing
sha1        = { workspace = true }
sha2        = { workspace = true }
# columnar storage engine (Phase 03+)
memmap2  = { workspace = true }
roaring  = { workspace = true }
fst      = { workspace = true }
bytemuck = { workspace = true }

# errors
anyhow      = { workspace = true }
thiserror   = { workspace = true }

# logging — no tokio dep; core is sync
tracing     = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
criterion    = { workspace = true }
forgeql-core = { path = ".", features = ["test-helpers"] }
forgeql-lang-text = { workspace = true }
forgeql-lang-cpp    = { workspace = true }
forgeql-lang-rust   = { workspace = true }
forgeql-lang-python = { workspace = true }

[[bench]]
name              = "columnar_filter"
harness           = false
required-features = ["test-helpers"]

[[bench]]
name              = "columnar_range"
harness           = false
required-features = ["test-helpers"]
