[package]
name        = "forgeql-lang-json"
description = "JSON language support for ForgeQL"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lints]
workspace = true

[dependencies]
forgeql-core     = { workspace = true }
tree-sitter      = { workspace = true }
tree-sitter-json = { workspace = true }