[package]
name        = "forgeql-lang-markdown"
description = "Markdown language support for ForgeQL"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lints]
workspace = true

[dependencies]
forgeql-core   = { workspace = true }
tree-sitter    = { workspace = true }
tree-sitter-md = { workspace = true }