[package]
name        = "forgeql-lang-rust"
description = "Rust language support for ForgeQL"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lints]
workspace = true

[dependencies]
forgeql-core      = { workspace = true }
tree-sitter       = { workspace = true }
tree-sitter-rust  = { workspace = true }
