[package]
name        = "forgeql-lang-xml"
description = "XML language support for ForgeQL (covers .xml plus AUTOSAR/tresos/DaVinci dialects: .arxml, .xdm, .epc, .epd, .ecuc, .odx)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lints]
workspace = true

[dependencies]
forgeql-core    = { workspace = true }
tree-sitter     = { workspace = true }
tree-sitter-xml = { workspace = true }
