[package]
name        = "forgeql-server"
description = "ForgeQL server — multi-tenant MCP daemon over HTTP/SSE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.deb]
maintainer = "Andre Viegas <andrerviegas@gmail.com>"
section = "devel"
priority = "optional"
assets = [
    ["target/release/forgeql-server", "usr/bin/", "755"],
    ["man/forgeql-server.1", "usr/share/man/man1/forgeql-server.1", "644"],
]
extended-description = "ForgeQL server — a multi-tenant MCP daemon exposing AST-aware code queries and transformations over HTTP/SSE."

[[bin]]
name = "forgeql-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
forgeql-core          = { workspace = true }
forgeql-lang-c        = { workspace = true }
forgeql-lang-cpp      = { workspace = true }
forgeql-lang-python   = { workspace = true }
forgeql-lang-rust     = { workspace = true }
forgeql-lang-text     = { workspace = true }

# async runtime + HTTP framework
tokio = { workspace = true }
axum  = "0.8"

# serialization (MCP JSON-RPC envelope)
serde_json = { workspace = true }

# errors
anyhow = { workspace = true }

# logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI args
clap = { workspace = true }