[package]
name        = "forgeql"
description = "ForgeQL - AST-aware code transformation (MCP server, REPL, CLI)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[package.metadata.deb]
maintainer = "Andre Viegas <andrerviegas@gmail.com>"
section = "devel"
priority = "optional"
assets = [
    ["target/release/forgeql", "usr/bin/", "755"],
    ["man/forgeql.1", "usr/share/man/man1/forgeql.1", "644"],
]
extended-description = "AST-aware code transformation engine. Provides the forgeql binary: an MCP server, interactive REPL, and command-line interface for querying and transforming source code by structure rather than text."

[[bin]]
name = "forgeql"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
forgeql-core        = { workspace = true }
forgeql-lang-c      = { workspace = true }
forgeql-lang-cpp    = { workspace = true }
forgeql-lang-json   = { workspace = true }
forgeql-lang-markdown = { workspace = true }
forgeql-lang-python = { workspace = true }
forgeql-lang-rust   = { workspace = true }
forgeql-lang-yaml   = { workspace = true }

# async (MCP transport)
tokio = { workspace = true }

# MCP protocol
rmcp = { workspace = true }

# serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# errors
anyhow = { workspace = true }

# logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI args + REPL
clap      = { workspace = true }
rustyline = { workspace = true }
dirs      = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
# allocator — replace glibc malloc to recover RSS after large index frees
# (e.g. rollback drop_index+resume_index on zephyr-scale sessions)
# Not used on Windows: jemalloc does not support MinGW cross-compilation.
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
forgeql-core = { path = "../forgeql-core", features = ["test-helpers"] }
