[package]
name        = "forgeql-ts-debug"
version     = "0.1.0"
edition     = "2024"
publish     = false
description = "Tree-sitter parse-tree inspector for ForgeQL development"

# Not a library — dev tool only.
[[bin]]
name = "ts-debug"
path = "src/main.rs"

[dependencies]
tree-sitter        = { workspace = true }
tree-sitter-c      = { workspace = true }
tree-sitter-cpp    = { workspace = true }
tree-sitter-rust   = { workspace = true }
tree-sitter-python = { workspace = true }

# Dev tooling: relax the workspace lints that are too strict for a CLI binary.
[lints.rust]
unsafe_code    = "deny"      # keep this always
missing_docs   = "allow"
unused_results = "warn"

[lints.clippy]
pedantic       = { level = "warn", priority = -1 }
unwrap_used    = "allow"     # acceptable in a small CLI / debug tool
expect_used    = "allow"
panic          = "allow"
